# privilix

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  sample.env
app/commands/: admin.py  fun.py  general.py  hi.py  management.py  misc.py  moderation.py  owner.py
app/core/: bot.py  config.py
app/core/constants/: colors.py  emojis.py
app/database/: config.py  queries.py
app/database/models/: guild_settings.py  mod_logs.py
app/events/: connections.py  error.py  join.py  leave.py  load.py  mention.py
app/helpers/: checks.py  constants.py  logging.py  time_converter.py  time_parser.py
app/services/database/: config.py  queries.py
app/services/database/models/: feature_settings.py  guild.py  guild_settings.py  mod_logs.py
app/services/moderation/: checks.py
app/tasks/: topgg.py
app/ui/: embeds.py
app/ui/modals/: appeal_modal.py
app/ui/views/: appealDmView.py  helpView.py  modlogView.py  setup.py  warningView.py
app/ui/views/appeals/: ban_appeals.py  warn_appeals.py
data/: database.db  database.db-shm  database.db-wal
migrations/models/: 0_20251129032007_init.py  0_20251212230940_init.py  1_20251203045349_update.py  2_20251206172712_add_feature_settings.py  2_20260214134157_update.py  3_20251208212245_update.py
